octdatidx/.antlr/OctdatParser.mjs
// Generated from x:/Repo/NFModTool/octdatidx/Octdat.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class OctdatParser extends antlr4.Parser {

    static grammarFileName = "Octdat.g4";
    static literalNames = [ null, "'id'", "'type'", "'inherit'", "'alias'", 
                            "'name'", "'description'", "'icon'", "'modifierIcon'", 
                            "'attributes'", "'limit'", "'activation'", "'targetType'", 
                            "'actions'", "'ingredients'", "'ingredientColors'", 
                            "'prefab'", "'consumableModifiers'", "'craftAt'", 
                            "'value'", "'dropSound'", "'carryChance'", "'moodBoost'", 
                            "'importance'", "'importanceRange'", "'subject'", 
                            "'defectiveNoun'", "'itemClass'", "'category'", 
                            "'stackLimit'", "'usableStackSize'", "'indoorDecayAfter'", 
                            "'outdoorDecayAfter'", "'temperatureAffectsDecay'", 
                            "'commandType'", "'batch'", "'abstract'", "'cosmeticPrefab'", 
                            "'equipmentSlot'", "'staticBuffs'", "'equipmentCosmetic'", 
                            "'colorSlots'", "'buffScale'", "'stats'", "'salvageAt'", 
                            "'salvage'", "'progressMultiplier'", "'researchEntry'", 
                            "'qualityDifficulty'", "'skillCurve'", "'relatedSubject'", 
                            "'forHerbavoreAnimals'", "'dropItemType'", "'dropItemChance'", 
                            "'sharedMaterials'", "'lengthMinutes'", "'cooldownMinutes'", 
                            "'range'", "'autoEnemies'", "'statusEffectName'", 
                            "'statusEffectMinutes'", "'effect'", "'self'", 
                            "'stat'", "'delta'", "'minutesToMaturity'", 
                            "'filter'", "'count'", "'color'", "'path'", 
                            "'behavior'", "'physics'", "'names'", "'material'", 
                            "'statName'", "'multiplier'", "'good'", "'maskMaterials'", 
                            "'materials'", "'reference'", "'formula'", "'modifier'", 
                            "'min'", "'max'", "'itemType'", null, null, 
                            null, null, null, null, "'='", "'{'", "'}'", 
                            "'['", "']'", "'('", "')'", "','", "':'", "'.'", 
                            "'/'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "ID", "STRING", 
                             "NUMBER", "BOOLEAN", "COLOR", "DURATION", "ASSIGN", 
                             "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                             "LPAREN", "RPAREN", "COMMA", "COLON", "DOT", 
                             "SLASH", "WS" ];
    static ruleNames = [ "octdatFile", "objectDefinition", "objectBody", 
                         "objectProperty", "idProp", "typeProp", "inheritProp", 
                         "aliasProp", "nameProp", "descriptionProp", "iconProp", 
                         "modifierIconProp", "attributesProp", "limitProp", 
                         "activationProp", "targetTypeProp", "actionsProp", 
                         "ingredientsProp", "colorsProp", "prefabProp", 
                         "consumableModifiersProp", "craftAtProp", "valueProp", 
                         "dropSoundProp", "carryChanceProp", "moodBoostProp", 
                         "importanceProp", "importanceRangeProp", "subjectProp", 
                         "defectiveNounProp", "itemClassProp", "categoryProp", 
                         "stackLimitProp", "usableStackSizeProp", "indoorDecayAfterProp", 
                         "outdoorDecayAfterProp", "temperatureAffectsDecayProp", 
                         "commandTypeProp", "batchProp", "abstractProp", 
                         "cosmeticPrefabProp", "equipmentSlotProp", "staticBuffsProp", 
                         "equipmentCosmeticProp", "colorSlotsProp", "buffScaleProp", 
                         "statsProp", "salvageAtProp", "salvageProp", "progressMultiplierProp", 
                         "researchEntryProp", "qualityDifficultyProp", "skillCurveProp", 
                         "relatedSubjectProp", "forHerbavoreAnimalsProp", 
                         "dropItemTypeProp", "dropItemChanceProp", "sharedMaterialsProp", 
                         "attributeList", "attribute", "activationBody", 
                         "targetTypeBody", "targetTypeProps", "targetTypeRangeProp", 
                         "targetTypeAutoEnemiesProp", "actionList", "action", 
                         "actionBody", "actionProps", "actionStatusEffectNameProp", 
                         "actionStatusEffectMinutesProp", "actionEffectProp", 
                         "actionSelfProp", "actionStatProp", "actionDeltaProp", 
                         "actionMinutesToMaturityProp", "ingredientList", 
                         "ingredient", "ingredientBody", "ingredientProps", 
                         "ingredientFilterProp", "ingredientCountProp", 
                         "colorList", "color", "prefabBody", "prefabProps", 
                         "prefabPathProp", "prefabNameProp", "prefabBehaviorProp", 
                         "prefabPhysicsProp", "sharedMaterialsList", "sharedMaterialProp", 
                         "sharedMaterialBody", "sharedMaterialProps", "sharedMaterialNamesProp", 
                         "sharedMaterialMaterialProp", "nameList", "modifierList", 
                         "modifier", "modifierBody", "modifierProps", "modifierNameProp", 
                         "modifierDeltaProp", "modifierStatNameProp", "modifierMultiplierProp", 
                         "modifierGoodProp", "craftAtList", "craftAt", "staticBuffList", 
                         "staticBuff", "staticBuffBody", "staticBuffProps", 
                         "staticBuffStatNameProp", "staticBuffMultiplierProp", 
                         "staticBuffGoodProp", "equipmentCosmeticBody", 
                         "equipmentCosmeticProps", "equipmentCosmeticPrefabProp", 
                         "equipmentCosmeticMaskMaterialsProp", "maskMaterialList", 
                         "maskMaterial", "colorSlotList", "colorSlot", "colorSlotBody", 
                         "colorSlotProps", "colorSlotNameProp", "colorSlotMaterialsProp", 
                         "colorSlotReferenceProp", "materialList", "material", 
                         "statList", "stat", "statBody", "statProps", "statNameProp", 
                         "statFormulaProp", "statModifierProp", "statMinProp", 
                         "statMaxProp", "salvageList", "salvage", "salvageBody", 
                         "salvageProps", "salvageItemTypeProp", "salvageCountProp" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = OctdatParser.ruleNames;
        this.literalNames = OctdatParser.literalNames;
        this.symbolicNames = OctdatParser.symbolicNames;
    }



	octdatFile() {
	    let localctx = new OctdatFileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, OctdatParser.RULE_octdatFile);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 293;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===92) {
	            this.state = 290;
	            this.objectDefinition();
	            this.state = 295;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objectDefinition() {
	    let localctx = new ObjectDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, OctdatParser.RULE_objectDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 296;
	        this.match(OctdatParser.LBRACE);
	        this.state = 297;
	        this.objectBody();
	        this.state = 298;
	        this.match(OctdatParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objectBody() {
	    let localctx = new ObjectBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, OctdatParser.RULE_objectBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 303;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967294) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 8388607) !== 0)) {
	            this.state = 300;
	            this.objectProperty();
	            this.state = 305;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objectProperty() {
	    let localctx = new ObjectPropertyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, OctdatParser.RULE_objectProperty);
	    try {
	        this.state = 360;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 306;
	            this.idProp();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 307;
	            this.typeProp();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 308;
	            this.inheritProp();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 309;
	            this.aliasProp();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 310;
	            this.nameProp();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 311;
	            this.descriptionProp();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 312;
	            this.iconProp();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 313;
	            this.modifierIconProp();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 314;
	            this.attributesProp();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 315;
	            this.limitProp();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 316;
	            this.activationProp();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 317;
	            this.targetTypeProp();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 318;
	            this.actionsProp();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 319;
	            this.ingredientsProp();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 320;
	            this.colorsProp();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 321;
	            this.prefabProp();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 17);
	            this.state = 322;
	            this.consumableModifiersProp();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 18);
	            this.state = 323;
	            this.craftAtProp();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 19);
	            this.state = 324;
	            this.valueProp();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 20);
	            this.state = 325;
	            this.dropSoundProp();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 21);
	            this.state = 326;
	            this.carryChanceProp();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 22);
	            this.state = 327;
	            this.moodBoostProp();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 23);
	            this.state = 328;
	            this.importanceProp();
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 24);
	            this.state = 329;
	            this.importanceRangeProp();
	            break;
	        case 25:
	            this.enterOuterAlt(localctx, 25);
	            this.state = 330;
	            this.subjectProp();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 26);
	            this.state = 331;
	            this.defectiveNounProp();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 27);
	            this.state = 332;
	            this.itemClassProp();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 28);
	            this.state = 333;
	            this.categoryProp();
	            break;
	        case 29:
	            this.enterOuterAlt(localctx, 29);
	            this.state = 334;
	            this.stackLimitProp();
	            break;
	        case 30:
	            this.enterOuterAlt(localctx, 30);
	            this.state = 335;
	            this.usableStackSizeProp();
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 31);
	            this.state = 336;
	            this.indoorDecayAfterProp();
	            break;
	        case 32:
	            this.enterOuterAlt(localctx, 32);
	            this.state = 337;
	            this.outdoorDecayAfterProp();
	            break;
	        case 33:
	            this.enterOuterAlt(localctx, 33);
	            this.state = 338;
	            this.temperatureAffectsDecayProp();
	            break;
	        case 34:
	            this.enterOuterAlt(localctx, 34);
	            this.state = 339;
	            this.commandTypeProp();
	            break;
	        case 35:
	            this.enterOuterAlt(localctx, 35);
	            this.state = 340;
	            this.batchProp();
	            break;
	        case 36:
	            this.enterOuterAlt(localctx, 36);
	            this.state = 341;
	            this.abstractProp();
	            break;
	        case 37:
	            this.enterOuterAlt(localctx, 37);
	            this.state = 342;
	            this.cosmeticPrefabProp();
	            break;
	        case 38:
	            this.enterOuterAlt(localctx, 38);
	            this.state = 343;
	            this.equipmentSlotProp();
	            break;
	        case 39:
	            this.enterOuterAlt(localctx, 39);
	            this.state = 344;
	            this.staticBuffsProp();
	            break;
	        case 40:
	            this.enterOuterAlt(localctx, 40);
	            this.state = 345;
	            this.equipmentCosmeticProp();
	            break;
	        case 41:
	            this.enterOuterAlt(localctx, 41);
	            this.state = 346;
	            this.colorSlotsProp();
	            break;
	        case 42:
	            this.enterOuterAlt(localctx, 42);
	            this.state = 347;
	            this.buffScaleProp();
	            break;
	        case 43:
	            this.enterOuterAlt(localctx, 43);
	            this.state = 348;
	            this.statsProp();
	            break;
	        case 44:
	            this.enterOuterAlt(localctx, 44);
	            this.state = 349;
	            this.salvageAtProp();
	            break;
	        case 45:
	            this.enterOuterAlt(localctx, 45);
	            this.state = 350;
	            this.salvageProp();
	            break;
	        case 46:
	            this.enterOuterAlt(localctx, 46);
	            this.state = 351;
	            this.progressMultiplierProp();
	            break;
	        case 47:
	            this.enterOuterAlt(localctx, 47);
	            this.state = 352;
	            this.researchEntryProp();
	            break;
	        case 48:
	            this.enterOuterAlt(localctx, 48);
	            this.state = 353;
	            this.qualityDifficultyProp();
	            break;
	        case 49:
	            this.enterOuterAlt(localctx, 49);
	            this.state = 354;
	            this.skillCurveProp();
	            break;
	        case 50:
	            this.enterOuterAlt(localctx, 50);
	            this.state = 355;
	            this.relatedSubjectProp();
	            break;
	        case 51:
	            this.enterOuterAlt(localctx, 51);
	            this.state = 356;
	            this.forHerbavoreAnimalsProp();
	            break;
	        case 52:
	            this.enterOuterAlt(localctx, 52);
	            this.state = 357;
	            this.dropItemTypeProp();
	            break;
	        case 53:
	            this.enterOuterAlt(localctx, 53);
	            this.state = 358;
	            this.dropItemChanceProp();
	            break;
	        case 54:
	            this.enterOuterAlt(localctx, 54);
	            this.state = 359;
	            this.sharedMaterialsProp();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idProp() {
	    let localctx = new IdPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, OctdatParser.RULE_idProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 362;
	        this.match(OctdatParser.T__0);
	        this.state = 363;
	        this.match(OctdatParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeProp() {
	    let localctx = new TypePropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, OctdatParser.RULE_typeProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 365;
	        this.match(OctdatParser.T__1);
	        this.state = 366;
	        this.match(OctdatParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	inheritProp() {
	    let localctx = new InheritPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, OctdatParser.RULE_inheritProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 368;
	        this.match(OctdatParser.T__2);
	        this.state = 369;
	        this.match(OctdatParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aliasProp() {
	    let localctx = new AliasPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, OctdatParser.RULE_aliasProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 371;
	        this.match(OctdatParser.T__3);
	        this.state = 372;
	        this.match(OctdatParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nameProp() {
	    let localctx = new NamePropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, OctdatParser.RULE_nameProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 374;
	        this.match(OctdatParser.T__4);
	        this.state = 375;
	        this.match(OctdatParser.ASSIGN);
	        this.state = 376;
	        this.match(OctdatParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	descriptionProp() {
	    let localctx = new DescriptionPropContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, OctdatParser.RULE_descriptionProp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 378;
	        this.match(OctdatParser.T__5);
	        this.state = 379;
	        this.match(OctdatParser.ASSIGN);
	        this.state = 380;
	        this.match(OctdatParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


